added extras for media server

--- a/media-automation/.env.example
+++ b/media-automation/.env.example
@@ -4,7 +4,7 @@ PGID=1000
 TZ=Asia/Tbilisi
 WEBUI_PORT=8080
 TORRENTING_PORT=6881
-JELLYFIN_PublishedServerUrl=https://jello.infra.slick.ge
+JELLYFIN_PublishedServerUrl=jelyfin-server-url
 JELLYFIN_GROUP_ID=110
 RABBITMQ_HOST=rabbitmq
 RABBITMQ_PORT=5672
