--- a/.github/workflows/swiss-army-container.yaml
+++ b/.github/workflows/swiss-army-container.yaml
@@ -101,8 +101,8 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: "$DOCKERHUB_USERNAME"
-          password: "$DOCKERHUB_TOKEN"
+          username: ${{ secrets.DDOCKERHUB_USERNAME }}
+          password: ${{ secrets.DDOCKERHUB_TOKEN }}
 
       - name: Extract metadata
         id: meta
