--- a/.github/workflows/swiss-army-container.yaml
+++ b/.github/workflows/swiss-army-container.yaml
@@ -119,7 +119,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: swiss-army-container
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
