--- a/.github/workflows/swiss-army-container.yaml
+++ b/.github/workflows/swiss-army-container.yaml
@@ -85,7 +85,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Get secrets from Bitwarden
-        uses: bitwarden/sm-action@v2
+        uses: bitwarden/sm-action@v1
         with:
           access_token: ${{ secrets.BW_ACCESS_TOKEN }}
           secrets: |
@@ -101,8 +101,10 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DDOCKERHUB_USERNAME }}
-          password: ${{ secrets.DDOCKERHUB_TOKEN }}
+          username: $DOCKERHUB_USERNAME
+          password: $DOCKERHUB_TOKEN
+          #username: ${{ secrets.DDOCKERHUB_USERNAME }}
+          #password: ${{ secrets.DDOCKERHUB_TOKEN }}
 
       - name: Extract metadata
         id: meta
