--- a/.github/workflows/swiss-army-container.yaml
+++ b/.github/workflows/swiss-army-container.yaml
@@ -91,6 +91,11 @@ jobs:
           secrets: |
             ${{ secrets.DOCKERHUB_USERNAME_SECRET_ID }} > DOCKERHUB_USERNAME
             ${{ secrets.DOCKERHUB_TOKEN_SECRET_ID }} > DOCKERHUB_TOKEN
+      - name: var-verify-temp
+        run: |
+          [ "${{ env.DOCKERHUB_USERNAME}}" = "username" ] && echo "its the same dude"
+          [ "${{ env.DOCKERHUB_TOKEN}}" = "token" ] && echo "its the same dude"
+
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
