--- a/.github/workflows/swiss-army-container.yaml
+++ b/.github/workflows/swiss-army-container.yaml
@@ -90,7 +90,7 @@ jobs:
           access_token: ${{ secrets.BW_ACCESS_TOKEN }}
           secrets: |
             ${{ secrets.DOCKERHUB_USERNAME_SECRET_ID }} > DOCKERHUB_USERNAME
-            ${{ secrets.DOCKERHUB_TOKEN_SECRET_ID }} > DOCKERHUB_TOKEN
+            ${{ secrets.DOCKERHUB_TOKEN_SECRET_ID }} > DOCKERHUB_SECRET
 
 
       - name: Set up QEMU
@@ -103,9 +103,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           username: ${{ env.DOCKERHUB_USERNAME }}
-          password: ${{ env.DOCKERHUB_TOKEN }}
-          #username: ${{ secrets.DDOCKERHUB_USERNAME }}
-          #password: ${{ secrets.DDOCKERHUB_TOKEN }}
+          password: ${{ env.DOCKERHUB_SECRET }}
 
       - name: Extract metadata
         id: meta
