--- a/k8s/nle/clusterIssuer.yaml
+++ b/k8s/nle/clusterIssuer.yaml
@@ -5,10 +5,11 @@ metadata:
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
-    email: your-email@example.com
+    email: ghvineriaa@gmail.com
     privateKeySecretRef:
       name: letsencrypt-prod
     solvers:
       - http01:
           ingress:
             class: nginx
+
