--- a/hetzner/Ansible/inventory.ini
+++ b/hetzner/Ansible/inventory.ini
@@ -4,7 +4,7 @@ k8s-master ansible_host=10.0.1.3 ansible_user=root
 [nodes]
 k8s-node1 ansible_host=10.0.1.4 ansible_user=root
 k8s-node2 ansible_host=10.0.1.5 ansible_user=root
-k8s-node3 ansible_host=10.0.1.6 ansible_user=root
+#k8s-node3 ansible_host=10.0.1.6 ansible_user=root
 
 [k8s_cluster:children]
 control_plane
