--- a/k8s/authentik/values.yaml
+++ b/k8s/authentik/values.yaml
@@ -1,27 +1,43 @@
 authentik:
-  secret_key: "PleaseGenerateASecureKey"
+  secret_key:
+    valueFrom:
+      secretKeyRef:
+        name: authentik-secrets
+        key: secret-key
   # This sends anonymous usage-data, stack traces on errors and
   # performance data to sentry.io, and is fully opt-in
   error_reporting:
     enabled: true
   postgresql:
-    password: "ThisIsNotASecurePassword"
-  # email:
-  #   # -- SMTP Server emails are sent from, fully optional
-  #   host: ""
-  #   port: 
-  #   # -- SMTP credentials. When left empty, no authentication will be done.
-  #   username: ""
-  #   # -- SMTP credentials. When left empty, no authentication will be done.
-  #   password: ""
-  #   # -- Enable either use_tls or use_ssl. They can't be enabled at the same time.
-  #   use_tls: false
-  #   # -- Enable either use_tls or use_ssl. They can't be enabled at the same time.
-  #   use_ssl: false
-  #   # -- Connection timeout in seconds
-  #   timeout: 30
-  #   # -- Email 'from' address can either be in the format "foo@bar.baz" or "authentik <foo@bar.baz>"
-  #   from: ""
+    password:
+      valueFrom:
+        secretKeyRef:
+          name: authentik-secrets
+          key: postgresql-password
+  email:
+    # -- SMTP Server emails are sent from, fully optional
+    host: "smtp-relay.brevo.com"
+    port: 587
+    # -- SMTP credentials. When left empty, no authentication will be done.
+    username:
+      valueFrom:
+        secretKeyRef:
+          name: authentik-secrets
+          key: email-username
+    # -- SMTP credentials. When left empty, no authentication will be done.
+    password:
+      valueFrom:
+        secretKeyRef:
+          name: authentik-secrets
+          key: email-password
+    # -- Enable either use_tls or use_ssl. They can't be enabled at the same time.
+    use_tls: true
+    # -- Enable either use_tls or use_ssl. They can't be enabled at the same time.
+    use_ssl: false
+    # -- Connection timeout in seconds
+    timeout: 30
+    # -- Email 'from' address can either be in the format "foo@bar.baz" or "authentik <foo@bar.baz>"
+    from: "Slick Auth Support <support@services.slick.ge>"
 server:
   ingress:
     # Specify kubernetes ingress controller class name
@@ -31,15 +47,19 @@ server:
       kubernetes.io/tls-acme: "true"
     enabled: true
     hosts:
-      - authentik.domain.com
+      - authentik.k8s.slick.ge
     path: /
     pathType: Prefix
     tls:
       - secretName: authentik-tls
         hosts:
-          - authentik.domain.com
+          - authentik.k8s.slick.ge
 
 postgresql:
   enabled: true
   auth:
-    password: "ThisIsNotASecurePassword"
+    password:
+      valueFrom:
+        secretKeyRef:
+          name: authentik-secrets
+          key: postgresql-password
