--- a/.gitignore
+++ b/.gitignore
@@ -116,4 +116,8 @@ output.log
 Thumbs.db
 
 
-hetzner/Ansible/kube_config
+# Kubernetes config files
+**kube_config**
+
+# Kiro CLI conversation files
+*convo*
