--- a/new-k8s/ansible/provision-cluster.yml
+++ b/new-k8s/ansible/provision-cluster.yml
@@ -1,5 +1,5 @@
 - name: Provision Kubernetes control plane (simple)
-  hosts: all
+  hosts: k8s_cluster
   become: true
   gather_facts: false
 
@@ -227,24 +227,6 @@
       run_once: true
       delegate_to: "{{ groups['control_plane'][0] }}"
     
-    - name: Add metrics-server Helm repo
-      kubernetes.core.helm_repository:
-        name: metrics-server
-        repo_url: https://kubernetes-sigs.github.io/metrics-server/
-      run_once: true
-      delegate_to: "{{ groups['control_plane'][0] }}"
-
-    - name: Deploy metrics-server via Helm
-      kubernetes.core.helm:
-        name: metrics-server
-        chart_ref: metrics-server/metrics-server
-        release_namespace: kube-system
-        values:
-          args:
-            - --kubelet-insecure-tls
-      run_once: true
-      delegate_to: "{{ groups['control_plane'][0] }}"
-    
     - name: Save and show join command
       ansible.builtin.shell: "kubeadm token create --print-join-command | tee /root/join.sh"
       args:
@@ -295,13 +277,31 @@
       delegate_to: localhost
       when: setup_local_kubeconfig | default(false) | bool
     
-    - name: "Remove the temprorary kube_config file"
-      ansible.builtin.file:
-        path: ./kube_config
-        state: absent
-      run_once: true
-      delegate_to: localhost
-      when: setup_local_kubeconfig | default(false) | bool
+    # - name: "Remove the temprorary kube_config file"
+    #   ansible.builtin.file:
+    #     path: ./kube_config
+    #     state: absent
+    #   run_once: true
+    #   delegate_to: localhost
+    #   when: setup_local_kubeconfig | default(false) | bool
+    
+    # - name: Add metrics-server Helm repo
+    #   kubernetes.core.helm_repository:
+    #     name: metrics-server
+    #     repo_url: https://kubernetes-sigs.github.io/metrics-server/
+    #   run_once: true
+    #   delegate_to: localhost
+
+    # - name: Deploy metrics-server via Helm
+    #   kubernetes.core.helm:
+    #     name: metrics-server
+    #     chart_ref: metrics-server/metrics-server
+    #     release_namespace: kube-system
+    #     values:
+    #       args:
+    #         - --kubelet-insecure-tls
+    #   run_once: true
+    #   delegate_to: localhost
 
 - name: Join selected nodes to the cluster (optional)
   hosts: nodes
