--- a/new-k8s/infra-resources/provision-longhorn.yaml
+++ b/new-k8s/infra-resources/provision-longhorn.yaml
@@ -132,16 +132,55 @@
           #If need be use below as 'values.yaml'
 
           # Longhorn configuration for Hetzner homelab
-          # 3-node cluster: 1 control-plane + 2 workers
+          # 3-node cluster: all nodes have control-plane + worker roles
+          
+          # Allow Longhorn to run on control-plane nodes
+          longhornManager:
+            tolerations:
+              - key: "node-role.kubernetes.io/control-plane"
+                operator: "Exists"
+                effect: "NoSchedule"
+            resources:
+              requests:
+                cpu: 100m
+                memory: 128Mi
+              limits:
+                cpu: 500m
+                memory: 512Mi
+          longhornDriver:
+            tolerations:
+              - key: "node-role.kubernetes.io/control-plane"
+                operator: "Exists"
+                effect: "NoSchedule"
+            resources:
+              requests:
+                cpu: 50m
+                memory: 64Mi
+              limits:
+                cpu: 200m
+                memory: 256Mi
+          longhornUI:
+            tolerations:
+              - key: "node-role.kubernetes.io/control-plane"
+                operator: "Exists"
+                effect: "NoSchedule"
+            resources:
+              requests:
+                cpu: 50m
+                memory: 64Mi
+              limits:
+                cpu: 200m
+                memory: 256Mi
+          
           defaultBackupStoreSettings:
             # Storage settings
-            defaultReplicaCount: 2  # 2 replicas for HA (max we can do with 2 workers)
+            defaultReplicaCount: 1  # 1 replica across 3 nodes
             guaranteedEngineManagerCPU: 5  # CPU reservation percentage
             guaranteedReplicaManagerCPU: 5
-            # Backup settings (optional - configure S3 if needed)
-            backupTarget: "{{ longhorn_s3_backup_target }}"  # e.g., "s3://bucket@region/path" for Hetzner Object Storage
+            # Backup settings
+            backupTarget: "{{ longhorn_s3_backup_target }}"
             backupTargetCredentialSecret: "longhorn-s3-auth"
-            # Node selector - exclude control plane from storage
+            # Node/disk settings - use all nodes including control plane
             createDefaultDiskLabeledNodes: true
             defaultDataPath: /var/lib/longhorn
             # Performance tuning for smaller nodes
@@ -150,11 +189,13 @@
             # Auto-salvage and recovery
             autoSalvage: true
             autoDeletePodWhenVolumeDetachedUnexpectedly: true
+          
           persistence:
-            defaultClass: true  # Make longhorn the default StorageClass
-            defaultClassReplicaCount: 2
+            defaultClass: true
+            defaultClassReplicaCount: 1
             reclaimPolicy: Delete
             migratable: true
+          
           ingress:
             enabled: true
             ingressClassName: nginx
@@ -166,30 +207,6 @@
               nginx.ingress.kubernetes.io/auth-type: basic
               nginx.ingress.kubernetes.io/auth-secret: longhorn-auth-id
               nginx.ingress.kubernetes.io/auth-realm: "Longhorn - Authentication Required"
-          longhornManager:
-            resources:
-              requests:
-                cpu: 100m
-                memory: 128Mi
-              limits:
-                cpu: 500m
-                memory: 512Mi
-          longhornDriver:
-            resources:
-              requests:
-                cpu: 50m
-                memory: 64Mi
-              limits:
-                cpu: 200m
-                memory: 256Mi
-          longhornUI:
-            resources:
-              requests:
-                cpu: 50m
-                memory: 64Mi
-              limits:
-                cpu: 200m
-                memory: 256Mi
             #till here    
         kubeconfig: "{{ kubeconfig }}"
         context: "{{ kube_context if kube_context else omit }}"
@@ -197,6 +214,34 @@
         timeout: 10m
         atomic: true
         update_repo_cache: true
+
+    - name: Get Longhorn nodes
+      kubernetes.core.k8s_info:
+        api_version: longhorn.io/v1beta2
+        kind: Node
+        namespace: "{{ deployment_namespace }}"
+        kubeconfig: "{{ kubeconfig }}"
+        context: "{{ kube_context if kube_context else omit }}"
+      register: longhorn_nodes
+      retries: 10
+      delay: 5
+      until: longhorn_nodes.resources | length > 0
+
+    - name: Set per-disk storage reservation to 4GiB on all nodes
+      kubernetes.core.k8s_json_patch:
+        api_version: longhorn.io/v1beta2
+        kind: Node
+        name: "{{ item.metadata.name }}"
+        namespace: "{{ deployment_namespace }}"
+        kubeconfig: "{{ kubeconfig }}"
+        context: "{{ kube_context if kube_context else omit }}"
+        patch:
+          - op: replace
+            path: "/spec/disks/{{ (item.spec.disks | dict2items | first).key }}/storageReserved"
+            value: 4000000000  # ~4GiB reservation per disk
+      loop: "{{ longhorn_nodes.resources }}"
+      loop_control:
+        label: "{{ item.metadata.name }}"
 
     - name: Wait for Longhorn manager pods to be ready
       kubernetes.core.k8s_info:
