--- a/new-k8s/ansible/provision-cluster.yml
+++ b/new-k8s/ansible/provision-cluster.yml
@@ -9,8 +9,9 @@
     RUNC_VERSION: "1.2.1"
     CNI_PLUGINS_VERSION: "1.5.1"
     POD_NETWORK_CIDR: "10.244.0.0/16"
-    MASTER_PRIVATE_IP: "{{ master_private_ip | default('10.11.99.51') }}"
+    MASTER_PRIVATE_IP: "{{ master_private_ip | default('10.11.99.61') }}"
     EXTRA_API_SERVER_SANS: "{{ '127.0.0.1,10.11.99.50,k8s-mgmt.infra.slick.ge' }}"
+    CONTROL_PLANE_ENDPOINT: "10.11.99.50:6443"
 
   environment:
     DEBIAN_FRONTEND: noninteractive
@@ -174,7 +175,84 @@
       register: pull_images
       failed_when: pull_images.rc != 0
       run_once: true
-      delegate_to: "{{ groups['control_plane'][0] }}"
+
+    - name: Write kube-vip DaemonSet manifest to file
+      ansible.builtin.copy:
+        dest: "/etc/kubernetes/manifests/kube-vip.yaml"
+        mode: "0644"
+        content: |
+          apiVersion: v1
+          kind: Pod
+          metadata:
+            name: kube-vip
+            namespace: kube-system
+          spec:
+            containers:
+            - args:
+              - manager
+              env:
+              - name: vip_arp
+                value: "true"
+              - name: port
+                value: "6443"
+              - name: vip_nodename
+                valueFrom:
+                  fieldRef:
+                    fieldPath: spec.nodeName
+              - name: vip_interface
+                value: eth0
+              - name: vip_subnet
+                value: "32"
+              - name: dns_mode
+                value: first
+              - name: dhcp_mode
+                value: ipv4
+              - name: cp_enable
+                value: "true"
+              - name: cp_namespace
+                value: kube-system
+              - name: svc_enable
+                value: "true"
+              - name: svc_leasename
+                value: plndr-svcs-lock
+              - name: vip_leaderelection
+                value: "true"
+              - name: vip_leasename
+                value: plndr-cp-lock
+              - name: vip_leaseduration
+                value: "5"
+              - name: vip_renewdeadline
+                value: "3"
+              - name: vip_retryperiod
+                value: "1"
+              - name: address
+                value: 10.11.99.50
+              - name: prometheus_server
+                value: :2112
+              image: ghcr.io/kube-vip/kube-vip:v1.0.4
+              imagePullPolicy: IfNotPresent
+              name: kube-vip
+              resources: {}
+              securityContext:
+                capabilities:
+                  add:
+                  - NET_ADMIN
+                  - NET_RAW
+                  drop:
+                  - ALL
+              volumeMounts:
+              - mountPath: /etc/kubernetes/admin.conf
+                name: kubeconfig
+            hostAliases:
+            - hostnames:
+              - kubernetes
+              ip: 127.0.0.1
+            hostNetwork: true
+            volumes:
+            - hostPath:
+                path: /etc/kubernetes/super-admin.conf
+              name: kubeconfig
+          status: {}
 
     - name: kubeadm init
       ansible.builtin.command: >
@@ -183,6 +261,7 @@
         --kubernetes-version={{ KUBE_VERSION }}
         --apiserver-advertise-address={{ MASTER_PRIVATE_IP }}
         --apiserver-cert-extra-sans={{ EXTRA_API_SERVER_SANS }}
+        --control-plane-endpoint={{ CONTROL_PLANE_ENDPOINT }}
         --ignore-preflight-errors=NumCPU
         --upload-certs
       args:
@@ -277,78 +356,80 @@
       delegate_to: localhost
       when: setup_local_kubeconfig | default(false) | bool
     
-    # - name: "Remove the temprorary kube_config file"
-    #   ansible.builtin.file:
-    #     path: ./kube_config
-    #     state: absent
-    #   run_once: true
-    #   delegate_to: localhost
-    #   when: setup_local_kubeconfig | default(false) | bool
-    
-    # - name: Add metrics-server Helm repo
-    #   kubernetes.core.helm_repository:
-    #     name: metrics-server
-    #     repo_url: https://kubernetes-sigs.github.io/metrics-server/
-    #   run_once: true
-    #   delegate_to: localhost
-
-    # - name: Deploy metrics-server via Helm
-    #   kubernetes.core.helm:
-    #     name: metrics-server
-    #     chart_ref: metrics-server/metrics-server
-    #     release_namespace: kube-system
-    #     values:
-    #       args:
-    #         - --kubelet-insecure-tls
-    #   run_once: true
-    #   delegate_to: localhost
-
-- name: Join selected nodes to the cluster (optional)
-  hosts: nodes
+# Join additional control-plane nodes
+- name: Join additional control-plane nodes to the cluster
+  hosts: control_plane
   become: true
   gather_facts: false
-
   tasks:
-    - name: Wait for SSH to be ready (nodes)
+    - name: Wait for SSH to be ready (control-plane join)
       ansible.builtin.wait_for_connection:
         delay: 5
         sleep: 10
         timeout: 600
+      when: inventory_hostname != groups['control_plane'][0]
 
-    - name: Read join command from master node
-      ansible.builtin.slurp:
-        src: /root/join.sh
-      delegate_to: "{{ groups['control_plane'][0] }}"
+    - name: Get kubeadm join command with cert key
+      ansible.builtin.shell: |
+        kubeadm token create --print-join-command --certificate-key $(kubeadm init phase upload-certs --upload-certs | tail -1)
+      args:
+        creates: /root/join-control-plane.sh
+      register: join_cp_cmd
       run_once: true
-      register: join_script
+      delegate_to: "{{ groups['control_plane'][0] }}"
 
-    - name: Set join command fact on all targets
+    - name: Set join command fact for control-plane
       ansible.builtin.set_fact:
-        join_cmd: "{{ (hostvars[play_hosts | first].join_script.content | b64decode).strip() }}"
+        join_cp_cmd: "{{ join_cp_cmd.stdout | trim }} --control-plane"
+      when: inventory_hostname != groups['control_plane'][0]
 
-    - name: Write join script on target
+    - name: Write join script on target (control-plane)
       ansible.builtin.copy:
-        dest: /root/join.sh
+        dest: /root/join-control-plane.sh
         mode: "0755"
-        content: "{{ join_cmd }}"
+        content: "{{ join_cp_cmd }}"
+      when: inventory_hostname != groups['control_plane'][0]
 
-    - name: Execute join (idempotent)
-      ansible.builtin.command: "{{ join_cmd }}"
+    - name: Execute join (idempotent, control-plane)
+      ansible.builtin.command: "{{ join_cp_cmd }}"
       args:
         creates: /etc/kubernetes/kubelet.conf
-      register: node_join
-      failed_when: node_join.rc != 0 and 'already exists' not in node_join.stderr
+      register: node_join_cp
+      failed_when: node_join_cp.rc != 0 and 'already exists' not in node_join_cp.stderr
+      when: inventory_hostname != groups['control_plane'][0]
 
-    - name: Verify node joined successfully
+    - name: Verify node joined successfully (control-plane)
       ansible.builtin.stat:
         path: /etc/kubernetes/kubelet.conf
-      register: kubelet_conf
-      failed_when: not kubelet_conf.stat.exists
+      register: kubelet_conf_cp
+      failed_when: not kubelet_conf_cp.stat.exists
+      when: inventory_hostname != groups['control_plane'][0]
 
-    - name: Wait for node to be ready
+    - name: Wait for node to be ready (control-plane)
       ansible.builtin.command: kubectl get node {{ inventory_hostname }} -o jsonpath='{.status.conditions[?(@.type=="Ready")].status}'
-      register: node_ready
-      until: node_ready.stdout == "True"
+      register: node_ready_cp
+      until: node_ready_cp.stdout == "True"
       retries: 20
       delay: 15
+      delegate_to: "{{ groups['control_plane'][0] }}"
+      when: inventory_hostname != groups['control_plane'][0]
+
+# Remove control-plane taint and exclude-from-external-load-balancers label from all nodes
+- name: Remove control-plane taint and exclude-from-external-load-balancers label from all nodes
+  hosts: k8s_cluster
+  become: true
+  gather_facts: false
+  tasks:
+    - name: Remove control-plane taint (NoSchedule) from node
+      ansible.builtin.command: >
+        kubectl taint nodes {{ inventory_hostname }} node-role.kubernetes.io/control-plane:NoSchedule-
+      register: taint_remove
+      failed_when: taint_remove.rc != 0 and 'not found' not in taint_remove.stderr and 'taint key not found' not in taint_remove.stderr
+      delegate_to: "{{ groups['control_plane'][0] }}"
+
+    - name: Remove exclude-from-external-load-balancers label from node
+      ansible.builtin.command: >
+        kubectl label node {{ inventory_hostname }} node.kubernetes.io/exclude-from-external-load-balancers-
+      register: label_remove
+      failed_when: label_remove.rc != 0 and 'not found' not in label_remove.stderr and 'label not found' not in label_remove.stderr
       delegate_to: "{{ groups['control_plane'][0] }}"
