--- a/new-k8s/ansible/inventory.ini
+++ b/new-k8s/ansible/inventory.ini
@@ -1,15 +1,11 @@
-[control_plane]
-k8s-mgmt-01 ansible_host=10.11.99.51 ansible_user=slick mac_addr=52:54:00:AA:00:01
 
-[nodes]
+[control_plane]
 k8s-node-01 ansible_host=10.11.99.61 ansible_user=slick mac_addr=52:54:00:BB:00:01
 k8s-node-02 ansible_host=10.11.99.62 ansible_user=slick mac_addr=52:54:00:BB:00:02
-; k8s-node-03 ansible_host=10.11.99.63 ansible_user=slick mac_addr=52:54:00:BB:00:03
-; k8s-node-04 ansible_host=10.11.99.64 ansible_user=slick mac_addr=52:54:00:BB:00:04
+k8s-node-03 ansible_host=10.11.99.63 ansible_user=slick mac_addr=52:54:00:BB:00:03
 
 [k8s_cluster:children]
 control_plane
-nodes
 
 [proxmox_nodes]
 t620 ansible_host=10.10.10.48 ansible_user=root ansible_python_interpreter=/usr/bin/python3.13
